[package]
name = "paddle_inference"
version = "0.4.0"
edition = "2021"
authors = ["ZB_陈 <949536395@qq.com>"]
keywords = ["ml", "dl", "paddle", "ffi"]
repository = "https://github.com/ZB94/paddle_inference"
license = "Apache-2.0"
description = "paddle_inference_c的Rust封装"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
serde = ["dep:serde"]

[dependencies]
libloading = "0.7.3"
once_cell = "1.9.0"
serde = { version = "1", features = ["derive"], optional = true }
