[package]
name = "ocr"
version = "0.1.0"
edition = "2021"
authors = ["ZB_陈 <949536395@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
opencv = "0.74.1"
paddle_inference = { version = "0.4.0", path = "../.." }
